ocp-deploy/template-springboot.yaml
---
# Source: ibank-fe-remittance/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ibank-fe-remittance
  labels:
    app: ibank-fe-remittance
spec:
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: ibank-fe-remittance
---
# Source: ibank-fe-remittance/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ibank-fe-remittance
spec:
  selector:
    matchLabels:
      app: ibank-fe-remittance
  replicas: 1
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: "true"
      labels:
        app: ibank-fe-remittance
    spec:
      containers:
        - name: ibank-fe-remittance
          imagePullPolicy: Always
          resources:
            requests:
              cpu: '100m'
              memory: '768M'
            limits:
              cpu: '2'
              memory: '1.5G'
          image: 'devharbor.firstbank.com.tw/ibank/ibank-fe-remittance:0.0.29'
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 5
          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 10
      imagePullSecrets:
        - name: harbor-secret
