ocp-deploy/template-node-frontend.yaml
---
# Source: ileobank/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ileobank
  labels:
    app: ileobank
spec:
  ports:
  - port: 8081
    targetPort: 8081
    protocol: TCP
    name: http
  selector:
    app: ileobank
---
# Source: ileobank/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ileobank
spec:
  selector:
    matchLabels:
      app: ileobank
  replicas: 1
  template:
    metadata:
      labels:
        app: ileobank
    spec:
      containers:
        - name: ileobank
          imagePullPolicy: Always
          resources:
            requests:
              cpu: '10m'
              memory: '20M'
            limits:
              cpu: '2'
              memory: '1.5G'
          image: 'devharbor.firstbank.com.tw/ibank-web/ileobank:6.2.3'
          ports:
            - containerPort: 8081
          readinessProbe:
            httpGet:
              path: /c1/ileobank/zh/index.html
              port: 8081
              scheme: HTTP
            initialDelaySeconds: 5
          livenessProbe:
            httpGet:
              path: /c1/ileobank/zh/index.html
              port: 8081
              scheme: HTTP
            initialDelaySeconds: 10
          volumeMounts:
          - mountPath: /opt/bitnami/nginx/conf/nginx.conf  # mount only one file
            subPath: nginx.conf  # mount only one file
            name: nginx-conf  # mount nginx-conf volume to /opt/bitnami/nginx/conf/nginx.conf
      volumes:
      - name: nginx-conf  # volume name
        configMap:
          name: ileobank  # configMap name
          items:
          - key: nginx.conf
            path: nginx.conf  # rename nginx.conf mount file
      imagePullSecrets:
        - name: harbor-secret
---
# Source: ileobank/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ileobank
spec:
  tls:
    - hosts:
        - ibank-web.apps.devocp.firstbank.com.tw
      secretName: api-tls-certificates
  rules:
    - host: ibank-web.apps.devocp.firstbank.com.tw
      http:
        paths:
          - path: /c1/ileobank
            pathType: Prefix
            backend:
              service:
                name: ileobank
                port:
                  number: 8081
